--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -28,6 +28,15 @@ jobs:
     - name: Run Tests
       run: |
         python core/manage.py test
+      env:
+        DJANGO_SETTINGS_MODULE: core.settings
+        DBENGINE: django.db.backends.mysql
+        DBNAME: computer_workshop
+        DBUSER: root
+        DBPASSWORD: 12345678
+        DBHOST: localhost
+        DBPORT: 3306
+
     - name: Run Migrations
       run: python core/manage.py migrate
       env:
