--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -31,20 +31,20 @@ jobs:
       env:
         DJANGO_SETTINGS_MODULE: core.settings
         DBENGINE: django.db.backends.mysql
-        DBNAME: computer_workshop
-        DBUSER: root
-        DBPASSWORD: 12345678
-        DBHOST: localhost
-        DBPORT: 3306
+        DBNAME: ${{ secrets.MYSQL_DBNAME }}
+        DBUSER: ${{ secrets.MYSQL_DBUSER }}
+        DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        DBHOST: ${{ secrets.MYSQL_DBHOST }}
+        DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
     - name: Run Migrations
       run: python core/manage.py migrate
       env:
         DJANGO_SETTINGS_MODULE: core.settings
         DBENGINE: django.db.backends.mysql
-        DBNAME: computer_workshop
-        DBUSER: root
-        DBPASSWORD: 12345678
-        DBHOST: localhost
-        DBPORT: 3306
+        DBNAME: ${{ secrets.MYSQL_DBNAME }}
+        DBUSER: ${{ secrets.MYSQL_DBUSER }}
+        DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+        DBHOST: ${{ secrets.MYSQL_DBHOST }}
+        DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
