--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.8.1
 Django==4.2
-django-filter==24.2
-djangorestframework==3.15.1
-Markdown==3.6
+djangorestframework==3.15.2
+mysql-client==0.0.1
+python-dotenv==1.0.1
 sqlparse==0.5.0
