--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -14,6 +14,13 @@ jobs:
       max-parallel: 4
       matrix:
         python-version: [3.11, 3.12]
+    env:
+      DBENGINE: django.db.backends.mysql
+      DBNAME: ${{ secrets.MYSQL_DBNAME }}
+      DBUSER: ${{ secrets.MYSQL_DBUSER }}
+      DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      DBHOST: ${{ secrets.MYSQL_DBHOST }}
+      DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
     steps:
     - uses: actions/checkout@v4
@@ -28,21 +35,21 @@ jobs:
     - name: Run Tests
       run: |
         python core/manage.py test
-      env:
-        DBENGINE: django.db.backends.mysql
-        DBNAME: ${{ secrets.MYSQL_DBNAME }}
-        DBUSER: ${{ secrets.MYSQL_DBUSER }}
-        DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        DBHOST: ${{ secrets.MYSQL_DBHOST }}
-        DBPORT: ${{ secrets.MYSQL_DBPORT }}
+      # env:
+      #   DBENGINE: django.db.backends.mysql
+      #   DBNAME: ${{ secrets.MYSQL_DBNAME }}
+      #   DBUSER: ${{ secrets.MYSQL_DBUSER }}
+      #   DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      #   DBHOST: ${{ secrets.MYSQL_DBHOST }}
+      #   DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
     - name: Run Migrations
       run: python core/manage.py migrate
-      env:
-        DBENGINE: django.db.backends.mysql
-        DBNAME: ${{ secrets.MYSQL_DBNAME }}
-        DBUSER: ${{ secrets.MYSQL_DBUSER }}
-        DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        DBHOST: ${{ secrets.MYSQL_DBHOST }}
-        DBPORT: ${{ secrets.MYSQL_DBPORT }}
+      # env:
+      #   DBENGINE: django.db.backends.mysql
+      #   DBNAME: ${{ secrets.MYSQL_DBNAME }}
+      #   DBUSER: ${{ secrets.MYSQL_DBUSER }}
+      #   DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      #   DBHOST: ${{ secrets.MYSQL_DBHOST }}
+      #   DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
