--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -40,12 +40,12 @@ jobs:
 
     - name: Run Migrations
       run: python core/manage.py migrate
-      env:
-        DJANGO_SETTINGS_MODULE: core.settings
-        DBENGINE: django.db.backends.mysql
-        DBNAME: ${{ secrets.MYSQL_DBNAME }}
-        DBUSER: ${{ secrets.MYSQL_DBUSER }}
-        DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        DBHOST: ${{ secrets.MYSQL_DBHOST }}
-        DBPORT: ${{ secrets.MYSQL_DBPORT }}
+      # env:
+      #   DJANGO_SETTINGS_MODULE: core.settings
+      #   DBENGINE: django.db.backends.mysql
+      #   DBNAME: ${{ secrets.MYSQL_DBNAME }}
+      #   DBUSER: ${{ secrets.MYSQL_DBUSER }}
+      #   DBPASSWORD: ${{ secrets.MYSQL_PASSWORD }}
+      #   DBHOST: ${{ secrets.MYSQL_DBHOST }}
+      #   DBPORT: ${{ secrets.MYSQL_DBPORT }}
 
