--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -39,7 +39,10 @@ jobs:
     #     python core/manage.py test
 
     - name: Run Migrations
-      run: python core/manage.py migrate
+      run: |
+        python3 -m pip install --upgrade pip
+        pip3 install -r requirements.txt
+        python core/manage.py migrate
       # env:
       #   DJANGO_SETTINGS_MODULE: core.settings
       #   DBENGINE: django.db.backends.mysql
